# arizona-searches-beagle-impute

./: .gitignore  flake.nix  impute.cabal  result
nix/: hix.nix
src/: impute.hs
